--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ header {
 	background-color: rgb(254, 234, 233) !important;
 }
 
+.navbar-brand-image {
+	width: 250px;
+	height: 60px;
+}
 .nav-link {
 	color: #3c3c3c !important;
 	font-weight: bold;
@@ -27,4 +31,41 @@ header {
 }
 .blue-text-color {
 	color: #363958 !important;
+}
+
+.top-banner {
+	padding-top: 100px;
+}
+
+.top-banner h1 {
+	font-size: 50px;
+}
+
+.top-banner-right-side {
+	width: 60%;
+}
+.top-banner-left-side {
+	width: 45%;
+}
+
+@media only screen and (max-width: 768px) {
+	.top-banner-right-side {
+		width: 100% !important;
+	}
+	.top-banner-left-side {
+		width: 100% !important;
+	}
+}
+
+@media only screen and (max-width: 380px) {
+	.navbar-brand-image {
+		width: 150px;
+		height: 30px;
+	}
+	.top-banner h1 {
+		font-size: 30px;
+	}
+	.navbar-toggler {
+		font-size: 16px !important;
+	}
 }
